[tool.poetry]
name = "aws-croniter"
version = "2.1.1"
description = "A Python utility for AWS cron expressions. Validate and parse AWS EventBridge cron expressions seamlessly."
authors = ["Siddarth Patil <hello@techwithsid.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

packages = [{ include = "aws_croniter", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.1"

[tool.poetry.group.test.dependencies]
coverage = "^7.6"
pytest = "^8.0.0"
pytest-cov = "^5.0"
tox = "^4.23.2"
ruff = "^0.9.2"


[tool.pytest.ini_options]
markers = [
    "package",
]
testpaths = "tests"
addopts = "--durations=3 --cov --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["aws_croniter"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
# Setting the maximum line length
line-length = 120
include = ["src"]

[tool.ruff.lint]
# Extending the rules to apply
extend-select = [
    "S", # flake8-bandit
    "E501", # Line too long
    "W292", # No newline at end of file
    "W293", # Blank line contains whitespace
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # asserts allowed in tests
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
